--- a/PrototypeTransferTool/PrototypeTransferTool/_Imports.razor
+++ b/PrototypeTransferTool/PrototypeTransferTool/_Imports.razor
@@ -9,3 +9,6 @@
 @using iTextSharp.text;
 @using iTextSharp.text.pdf;
 @using iTextSharp.text.pdf.parser;
+
+@using System.Xml;
+@using System.Text.RegularExpressions;
