--- a/PrototypeTransferTool/PrototypeTransferTool/wwwroot/css/BlazorTest.css
+++ b/PrototypeTransferTool/PrototypeTransferTool/wwwroot/css/BlazorTest.css
@@ -5,7 +5,7 @@
 .uploadfile {
     display: flex;
     width: 400px;
-    height: 350px;
+    height: 320px;
     margin: auto;
     border: 5px solid black;
     border-radius: 2px;
@@ -15,9 +15,8 @@
     position: relative;
     left: 50px;
     width: 300px;
-    height: 250px
+    height: 250px;
 }
-
-p {
-    font-size: 15px;
+.inputButton {
+    padding-top:10px;
 }
