--- a/PrototypeTransferTool/PrototypeTransferTool/BlazorTest.razor
+++ b/PrototypeTransferTool/PrototypeTransferTool/BlazorTest.razor
@@ -4,6 +4,7 @@
 
 <body>
     <h1>Upload jouw bestand hieronder</h1>
+    <p>(Je kan PDF bestanden laten omzetten naar XML bestand)</p>
 
     <div class="uploadfile" id="uploadDropzone">
         <label for="fileInput">
