extra check gedaan als de pad in appsettings niet bestaat, dan wordt met de default pad opgestart

--- a/PrototypeTransferTool/PrototypeTransferTool/BlazorTest.razor
+++ b/PrototypeTransferTool/PrototypeTransferTool/BlazorTest.razor
@@ -76,7 +76,16 @@
 
     private async Task OpenDirectoryDialog()
     {
-        string? directoryPath = MyConfig.GetDirectory(customFilePath);
+        string directoryPath = MyConfig.FilePath;
+        if (Directory.Exists(customFilePath))
+        {
+            directoryPath = MyConfig.GetDirectory(customFilePath);
+
+        }
+        else
+        {
+            directoryPath = MyConfig.GetDirectory("C:\\Windows");
+        }
 
         if (!string.IsNullOrEmpty(directoryPath))
         {
