voor blazortest ook up to date

--- a/PrototypeTransferTool/PrototypeTransferTool/BlazorTest.razor
+++ b/PrototypeTransferTool/PrototypeTransferTool/BlazorTest.razor
@@ -246,14 +246,63 @@
                                     opmerking.Append(Opmerking);
                                 }
 
-                                //Order
+                            }
+
+                            //Order
+                            if (currentText.Contains("AANTAL PRIJS EENHEID TOTAAL"))
+                            {
                                 int orderFrom = currentText.IndexOf("AANTAL PRIJS EENHEID TOTAAL");
                                 string page2 = "Página";
                                 if (currentText.Contains(page2))
                                 {
-                                    int orderTo = currentText.LastIndexOf(page2);
-                                    string Order = currentText.Substring(0, orderTo - 0);
-                                    order.Append(Order);
+                                    string orderWithText = currentText.Substring(orderFrom + "AANTAL PRIJS EENHEID TOTAAL".Length).Trim();
+                                    if (orderWithText.Contains("TOTAAL"))
+                                    {
+                                        int orderTo = orderWithText.IndexOf("TOTAAL");
+                                        orderWithText = orderWithText.Substring(0, orderTo);
+
+                                        orderWithText = orderWithText.Replace(" \n", " ");
+                                        // Regex-patroon om elk artikel te matchen
+
+                                        string pattern = @"(.+?)\s *(.*?)(?:\n|$)";
+
+                                        // Productinfo voor elk besteld product....
+                                        foreach (Match match in Regex.Matches(orderWithText, pattern))
+                                        {
+                                            string lineNumber = match.Groups[1].Value + " "; // Het lijnnummer
+                                            string orderLine = match.Groups[2].Value; // De bestellijn
+
+                                            if (lineNumber.StartsWith("0"))
+                                            {
+                                                order.Append(" " + lineNumber + orderLine);
+                                            }
+                                            else if (lineNumber.StartsWith("10") || lineNumber.StartsWith("20") || lineNumber.StartsWith("30") || lineNumber.StartsWith("40") || lineNumber.StartsWith("50") || lineNumber.StartsWith("60") || lineNumber.StartsWith("70") || lineNumber.StartsWith("80") || lineNumber.StartsWith("90") || lineNumber.StartsWith("100") || lineNumber.StartsWith("110") || lineNumber.StartsWith("120") || lineNumber.StartsWith("130") || lineNumber.StartsWith("140") || lineNumber.StartsWith("150") || lineNumber.StartsWith("160") || lineNumber.StartsWith("170") || lineNumber.StartsWith("180") || lineNumber.StartsWith("190") || lineNumber.StartsWith("200"))
+                                            {
+                                                order.Append("Order" + lineNumber + orderLine);
+                                            }
+                                            else
+                                            {
+                                                if (char.IsLetter(lineNumber[0]) && !lineNumber.StartsWith(" "))
+                                                {
+                                                    order.Append(" " + lineNumber + orderLine);
+                                                }
+                                                if (lineNumber.IndexOf('/') == 2 && !lineNumber.StartsWith(" "))
+                                                {
+                                                    order.Append(" " + lineNumber + orderLine);
+                                                }
+                                                else
+                                                {
+                                                    order.Append(lineNumber + orderLine);
+                                                }
+                                            }
+                                        }
+                                    }
+                                    else
+                                    {
+                                        int orderTo = orderWithText.IndexOf("TOTAAL");
+                                        string Order = orderWithText.Substring(0, orderTo - 0);
+                                        order.Append(Order);
+                                    }
                                 }
                                 else
                                 {
@@ -266,12 +315,40 @@
                                     }
                                     else
                                     {
-                                        string[] eachOrderFrom = orderWithText.Split('\n');
-                                        //Productinfo voor elk besteld product....
-                                        foreach (string orderLine in eachOrderFrom)
+                                        orderWithText = orderWithText.Replace(" \n", " ");
+                                        // Regex-patroon om elk artikel te matchen
+
+                                        string pattern = @"(.+?)\s *(.*?)(?:\n|$)";
+
+                                        // Productinfo voor elk besteld product....
+                                        foreach (Match match in Regex.Matches(orderWithText, pattern))
                                         {
-                                            order.AppendLine("Order"); // Voeg het lijnnummer toe
-                                            order.AppendLine(orderLine); // Voeg de bestellijn toe
+                                            string lineNumber = match.Groups[1].Value + " "; // Het lijnnummer
+                                            string orderLine = match.Groups[2].Value; // De bestellijn
+
+                                            if (lineNumber.StartsWith("0"))
+                                            {
+                                                order.Append(" " + lineNumber + orderLine);
+                                            }
+                                            else if (lineNumber.StartsWith("10") || lineNumber.StartsWith("20") || lineNumber.StartsWith("30") || lineNumber.StartsWith("40") || lineNumber.StartsWith("50") || lineNumber.StartsWith("60") || lineNumber.StartsWith("70") || lineNumber.StartsWith("80") || lineNumber.StartsWith("90") || lineNumber.StartsWith("100") || lineNumber.StartsWith("110") || lineNumber.StartsWith("120") || lineNumber.StartsWith("130") || lineNumber.StartsWith("140") || lineNumber.StartsWith("150") || lineNumber.StartsWith("160") || lineNumber.StartsWith("170") || lineNumber.StartsWith("180") || lineNumber.StartsWith("190") || lineNumber.StartsWith("200"))
+                                            {
+                                                order.Append("Order" + lineNumber + orderLine);
+                                            }
+                                            else
+                                            {
+                                                if (char.IsLetter(lineNumber[0]) && !lineNumber.StartsWith(" "))
+                                                {
+                                                    order.Append(" " + lineNumber + orderLine);
+                                                }
+                                                if (lineNumber.IndexOf('/') == 2 && !lineNumber.StartsWith(" "))
+                                                {
+                                                    order.Append(" " + lineNumber + orderLine);
+                                                }
+                                                else
+                                                {
+                                                    order.Append(lineNumber + orderLine);
+                                                }
+                                            }
                                         }
                                     }
                                 }
@@ -336,7 +413,7 @@
                             writer.WriteStartElement("Order");
                             //Huidige PDF text
                             //Element dat de ORDER bevat
-                            writer.WriteStartElement("Huidige_Texten");
+                            writer.WriteStartElement("Huidige PDFtext");
                             writer.WriteString(text.ToString());
                             writer.WriteEndElement();
                             //
@@ -504,6 +581,13 @@
                         }
                     }
                 }
+
+                if (!Directory.Exists(MyConfig.FilePath + "\\Submap"))
+                {
+                    Directory.CreateDirectory(MyConfig.FilePath + "\\Subumap");
+                }
+                string sourcePath = destinationPath + "\\" + fileName;
+                File.Move(sourcePath, destinationPath + "\\Submap\\" +  fileName);
             }
             else
             {
