kleine xmlwriter foutje, gefixt

--- a/PrototypeTransferTool/PrototypeTransferTool/BlazorTest.razor
+++ b/PrototypeTransferTool/PrototypeTransferTool/BlazorTest.razor
@@ -412,8 +412,8 @@
                             writer.WriteStartDocument();
                             writer.WriteStartElement("Order");
                             //Huidige PDF text
-                            //Element dat de ORDER bevat
-                            writer.WriteStartElement("Huidige PDFtext");
+                            // Element dat de ORDER bevat
+                            writer.WriteStartElement("Huidige_PDFtext");
                             writer.WriteString(text.ToString());
                             writer.WriteEndElement();
                             //
@@ -551,6 +551,8 @@
                                 writer.WriteString(totaalAantal);
                                 writer.WriteEndElement();
 
+
+                                writer.WriteString(orderLine.Trim());
                                 writer.WriteEndElement();
                             }
                             writer.WriteEndElement();
@@ -580,14 +582,8 @@
                             writer.WriteEndElement();
                         }
                     }
+                    memoryStream.Close();
                 }
-
-                if (!Directory.Exists(MyConfig.FilePath + "\\Submap"))
-                {
-                    Directory.CreateDirectory(MyConfig.FilePath + "\\Subumap");
-                }
-                string sourcePath = destinationPath + "\\" + fileName;
-                File.Move(sourcePath, destinationPath + "\\Submap\\" +  fileName);
             }
             else
             {
